font was not showing up on github pages, hopefully with this change that is solved.

--- a/_sass/minima-customized.scss
+++ b/_sass/minima-customized.scss
@@ -1,9 +1,10 @@
 @charset "utf-8";
 
 
+
 @font-face {
   font-family: "CMU Sans Serif";
-  src: "/assets/fonts/cmu-ss.ttf";
+  src: "../248nonny.github.io/assets/fonts/cmu-ss.ttf";
 }
 
 // Define defaults for each variable.
